--- a/src/Micros/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Micros/Catalog/Catalog.API/Catalog.API.csproj
@@ -9,4 +9,8 @@
 		<DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
+
 </Project>
