--- a/src/Micros/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Micros/Catalog/Catalog.API/Catalog.API.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MongoDB.Driver" Version="2.14.0-beta1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 		<DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.2" />
 	</ItemGroup>
