--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mongo
 
   basketdb:
-    image: redis
+    image: redis:alpine
 
   portainer:
     image: portainer/portainer-ce
