CONTAINERIZATION: 1. Added Container support for Discount API 2. Added Migrations for DiscountDb 3. Added API Endpoint for Discount API

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -28,6 +28,12 @@ services:
       context: .
       dockerfile: Micros/Basket/Basket.API/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Micros/Discount/Discount.API/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
