--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -49,7 +49,7 @@ services:
       - portainer_data:/data
 
   catalog.api:
-    container_name: catalogapi
+    container_name: catalog.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
@@ -59,7 +59,7 @@ services:
       - "8000:80"
 
   basket.api:
-    container_name: basketapi
+    container_name: basket.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionStrings=basketdb:6379"
@@ -67,3 +67,13 @@ services:
       - basketdb
     ports:
       - "8001:80"
+
+  discount.api:
+    container_name: discount.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin123;"
+    depends_on:
+      - discountdb
+    ports:
+      - "8002:80"
