--- a/src/Micros/Discount/Discount.Grpc/Discount.Grpc.csproj
+++ b/src/Micros/Discount/Discount.Grpc/Discount.Grpc.csproj
@@ -2,6 +2,9 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
+		<DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..\..</DockerfileContext>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -9,6 +12,8 @@
 		<PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
 
 		<PackageReference Include="Dapper" Version="2.0.123" />
+
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
 		<PackageReference Include="Npgsql" Version="6.0.1" />
 	</ItemGroup>
 
