--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -34,6 +34,12 @@ services:
       context: .
       dockerfile: Micros/Discount/Discount.API/Dockerfile
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Micros/Discount/Discount.Grpc/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
