--- a/src/Micros/Order/Core/Order.Application/Order.Application.csproj
+++ b/src/Micros/Order/Core/Order.Application/Order.Application.csproj
@@ -1,11 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Order.Domain\Order.Domain.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Order.Domain\Order.Domain.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Contracts\" />
+	  <Folder Include="Features\" />
+	  <Folder Include="Behaviour\" />
+	</ItemGroup>
 
 </Project>
