Order API Migrations and Containerization changes

--- a/src/Micros/Order/Order.API/appsettings.json
+++ b/src/Micros/Order/Order.API/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+  },
+  "EmailSettings": {
+    "FromAddress": "johndoe@gmail.com",
+    "ApiKey": "2c060267-bc8c-45a2-94ab-15a99d8a676b",
+    "FromName": "Mehmet"
+  }
 }
