--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -27,6 +27,15 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  orderdb:
+    container_name: orderdb
+    restart: always
+    ports:
+      - "1433:1433"
+    environment:
+      - "ACCEPT_EULA=Y"
+      - "SA_PASSWORD=SwN12345678"
+
   pgadmin:
     container_name: pgadmin
     restart: always
