--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -97,3 +97,13 @@ services:
       - discountdb
     ports:
       - "8003:80"
+
+  order.api:
+    container_name: order.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+    ports:
+      - "8004:80"
+    depends_on:
+      - orderdb
