RABBITMQ: Added RabbitMQ Message Broker support

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -36,6 +36,13 @@ services:
       - "ACCEPT_EULA=Y"
       - "SA_PASSWORD=SwN12345678"
 
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
   pgadmin:
     container_name: pgadmin
     restart: always
