--- a/src/Micros/Basket/Basket.API/appsettings.json
+++ b/src/Micros/Basket/Basket.API/appsettings.json
@@ -12,5 +12,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  }
 }
