Added RabbitMQ Consumer and Docker Support to Order Microservice

--- a/src/Micros/Order/Order.API/appsettings.json
+++ b/src/Micros/Order/Order.API/appsettings.json
@@ -14,5 +14,8 @@
     "FromAddress": "johndoe@gmail.com",
     "ApiKey": "2c060267-bc8c-45a2-94ab-15a99d8a676b",
     "FromName": "Mehmet"
+  },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   }
 }
